fix: update auction copies (#699)
* fix: update auction copies

* fix: new auth description copy

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -105,16 +105,16 @@
   "auction_modal": {
     "authorization": "Authorization",
     "authorization_description":
-      "Before you can purchase any LAND in the auction, you must first authorize the {contract_link} contract to access and operate your {token}",
+      "Before you can purchase any LAND in the auction using {token}, you must first authorize the {contract_link} contract to access and operate it in your behalf",
     "authorize_token": "Authorize {token} token",
     "confirmation": "Confirmation",
     "confirmation_description":
       "You are about to purchase {parcels} LAND for {price} {token}",
     "description":
       "There are just two things you need to do before you can start. First, you need to select the tokens you want to buy LAND with. Next, you have to authorize a new smart contract to access those tokens when you buy LAND.",
-    "i_agree_with_terms": "I agree with the {terms_link}",
+    "get_started": "Get started",
+    "i_agree_with_terms": "I accept the {terms_link}",
     "processing_tx": "Processing Transaction",
-    "start": "Get Started",
     "submit": "Proceed",
     "terms_and_conditions": "Terms & Conditions",
     "title": "Decentraland LAND Auction",
