--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -102,6 +102,14 @@
     "your_estate": "당신의 재산",
     "your_parcel": "당신의 토지"
   },
+  "auction_finished": {
+    "cta": "마켓 플레이스로 이동",
+    "description": "참여해 주셔서 감사합니다.",
+    "land_sold": "판매 된 판매량",
+    "mana_burned": "마나 불타",
+    "stats_title": "다음은 몇 가지 통계입니다.",
+    "title": "경매 완료"
+  },
   "auction_modal": {
     "authorization": "권한 부여",
     "authorization_description":
