feat: DRY css. Collapsable component

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -273,6 +273,8 @@
     "retry": "Retry",
     "revoke": "Revoke",
     "sale": "Sale",
+    "see_less": "See less",
+    "see_more": "See more",
     "service_unavailable": "Service unavailable",
     "settings": "Settings",
     "sign_in": "Sign In",
