--- a/src/Translation/locales/es.json
+++ b/src/Translation/locales/es.json
@@ -274,6 +274,8 @@
     "retry": "Reintentar",
     "revoke": "Revocar",
     "sale": "Venta",
+    "see_less": "Ver menos",
+    "see_more": "Ver más",
     "service_unavailable": "Servicio no disponible",
     "settings": "Configuración",
     "sign_in": "Conectar",
