--- a/src/Translation/locales/fr.json
+++ b/src/Translation/locales/fr.json
@@ -280,6 +280,8 @@
     "retry": "Recommencez",
     "revoke": "Révoquer",
     "sale": "Vente",
+    "see_less": "Voir moins",
+    "see_more": "Voir plus",
     "service_unavailable": "Service indisponible",
     "settings": "Paramètres",
     "sign_in": "Se connecter",
