--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -257,6 +257,8 @@
     "retry": "重试",
     "revoke": "撤消",
     "sale": "拍卖",
+    "see_less": "少见",
+    "see_more": "看更多",
     "service_unavailable": "暂停服务",
     "settings": "设置",
     "sign_in": "登录",
