--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -267,6 +267,8 @@
     "retry": "やり直す",
     "revoke": "取り消す",
     "sale": "販売",
+    "see_less": "もっと見る",
+    "see_more": "続きを見る",
     "service_unavailable": "サービスは利用できません",
     "settings": "設定",
     "sign_in": "サインイン",
