--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -271,6 +271,8 @@
     "retry": "다시 해 보다",
     "revoke": "취소",
     "sale": "판매",
+    "see_less": "적은 것을보십시오",
+    "see_more": "더보기",
     "service_unavailable": "서비스를 사용할 수 없음",
     "settings": "설정",
     "sign_in": "로그인",
