feat: auction-countdown

--- a/src/Translation/locales/en.json
+++ b/src/Translation/locales/en.json
@@ -131,6 +131,13 @@
     "watch_tutorial": "Watch video tutorial",
     "welcome": "Welcome to the Decentraland LAND Auction!"
   },
+  "auction_splash": {
+    "cta": "send",
+    "cta_title": "Enter your mail and we’ll let u know!",
+    "description":
+      "Participate in the LAND auction on Dec 10 and get some LAND!",
+    "title": "Decentraland Auction V2"
+  },
   "auction_page": {
     "available_parcels": "parcels available",
     "bid": "Purchase",
@@ -255,17 +262,23 @@
     "continue": "Continue",
     "contributions": "Contributions",
     "created_at": "Created at {date}",
+    "day": "day",
+    "days": "days",
     "duration": "Duration",
     "edit": "Edit",
+    "email": "mail@domain.com",
     "estate": "Estate",
     "estates": "Estates",
     "expired_at": "Expired {time}",
     "expires_in": "Expires {time}",
     "expires_in_more_than_years": "Expires in over {years} years",
     "for": "for",
+    "hours": "hours",
     "land": "LAND",
+    "learn_more": "learn more",
     "loading": "Loading",
     "marketplace": "Marketplace",
+    "minutes": "minutes",
     "mortgage": "Mortgage",
     "mortgages": "Mortgages",
     "own_address_warning": "That's your own address!",
@@ -284,6 +297,7 @@
     "sale": "Sale",
     "see_less": "See less",
     "see_more": "See more",
+    "seconds": "seconds",
     "service_unavailable": "Service unavailable",
     "settings": "Settings",
     "sign_in": "Sign In",
