--- a/src/Translation/locales/ja.json
+++ b/src/Translation/locales/ja.json
@@ -87,8 +87,7 @@
     "price": "価格",
     "price_placeholder": "この{asset_name}の価格はMANAです",
     "set_asset_price": "{asset_name}の価格と有効期限を設定します",
-    "set_new_asset_price":
-      "{asset_name}の新しい価格または有効期限を設定します",
+    "set_new_asset_price": "{asset_name}の新しい価格または有効期限を設定します",
     "update_asset": "{asset_name}の公開物件を更新する"
   },
   "atlas": {
@@ -149,6 +148,12 @@
     "token_tooltip": "購入に使用するトークンを選択してください",
     "total_price": "合計金額",
     "video_tutorial": "ビデオチュートリアル"
+  },
+  "auction_splash": {
+    "cta": "送信する",
+    "cta_title": "あなたのメールを入力し、私たちに知らせてください！",
+    "description": "12月10日にLANDオークションに参加し、LANDを獲得しよう！",
+    "title": "DecentralandオークションV2"
   },
   "authorization": {
     "allow": "{contract_link}に準じて{symbol}を操作することを許可する",
@@ -249,17 +254,23 @@
     "continue": "続ける",
     "contributions": "貢献区",
     "created_at": "{date}に作成済み",
+    "day": "日",
+    "days": "日々",
     "duration": "期間",
     "edit": "編集",
+    "email": "mail@domain.com",
     "estate": "エステート",
     "estates": "エステート",
     "expired_at": "{time}に締切済み",
     "expires_in": "締切：{time}",
     "expires_in_more_than_years": "締切まであと{years}年以上",
     "for": "for",
+    "hours": "時間",
     "land": "LAND",
+    "learn_more": "もっと詳しく知る",
     "loading": "読込み中",
     "marketplace": "マーケット",
+    "minutes": "分",
     "mortgage": "ローン",
     "mortgages": "ローン",
     "own_address_warning": "これはあなた自身のアドレスです！",
@@ -278,6 +289,7 @@
     "sale": "販売",
     "see_less": "もっと見る",
     "see_more": "続きを見る",
+    "seconds": "秒",
     "service_unavailable": "サービスは利用できません",
     "settings": "設定",
     "sign_in": "サインイン",
@@ -432,8 +444,7 @@
   "sign_in": {
     "account_unlocked": "アカウントがアンロックされているか確認してください",
     "get_started": "始める",
-    "intro":
-      "まず始めにあなたのLAND(土地)を安全に保管する環境を整えてください",
+    "intro": "まず始めにあなたのLAND(土地)を安全に保管する環境を整えてください",
     "options": {
       "desktop":
         "{metamask_link}の拡張機能や{ledger_nano_link}などのハードウェアウォレットを使用できます",
