--- a/src/Translation/locales/ko.json
+++ b/src/Translation/locales/ko.json
@@ -152,6 +152,12 @@
     "total_price": "총 가격",
     "video_tutorial": "비디오 자습서"
   },
+  "auction_splash": {
+    "cta": "보내다",
+    "cta_title": "귀하의 메일을 입력하고 우리가 알게 해줄거야!",
+    "description": "12 월 10 일 LAND 경매에 참가하여 LAND을 받으십시오!",
+    "title": "Decentraland 경매 V2"
+  },
   "authorization": {
     "allow": "{contract_link}이 {symbol}을 대신하여 작동하도록 승인합니다.",
     "allowed":
@@ -253,17 +259,23 @@
     "continue": "잇다",
     "contributions": "공헌",
     "created_at": "만든 {date}",
+    "day": "일",
+    "days": "일",
     "duration": "지속",
     "edit": "편집하다",
+    "email": "mail@domain.com",
     "estate": "재산",
     "estates": "부동산",
     "expired_at": "만료 됨 {time}",
     "expires_in": "만료 {time}",
     "expires_in_more_than_years": "{years} 년 이상 만료 됨",
     "for": "에 대한",
+    "hours": "시간",
     "land": "LAND",
+    "learn_more": "더 알아보기",
     "loading": "로드 중",
     "marketplace": "시장",
+    "minutes": "의사록",
     "mortgage": "저당",
     "mortgages": "모기지",
     "own_address_warning": "그것은 당신의 자신의 주소입니다!",
@@ -282,6 +294,7 @@
     "sale": "판매",
     "see_less": "적은 것을보십시오",
     "see_more": "더보기",
+    "seconds": "초",
     "service_unavailable": "서비스를 사용할 수 없음",
     "settings": "설정",
     "sign_in": "로그인",
