--- a/src/Translation/locales/zh.json
+++ b/src/Translation/locales/zh.json
@@ -143,6 +143,12 @@
     "total_price": "总价",
     "video_tutorial": "视频教程"
   },
+  "auction_splash": {
+    "cta": "发送",
+    "cta_title": "输入您的邮件，我们会告诉您！",
+    "description": "参加12月10日的LAND拍卖并获得一些LAND！",
+    "title": "Decentraland拍卖V2"
+  },
   "authorization": {
     "allow": "授权 {contract_link} 使用 {symbol}",
     "allowed": "您授权 {contract_link} 使用 {symbol}",
@@ -239,17 +245,23 @@
     "continue": "继续",
     "contributions": "小区份额",
     "created_at": "创建于 {date}",
+    "day": "天",
+    "days": "天",
     "duration": "持续时间",
     "edit": "编辑",
+    "email": "mail@domain.com",
     "estate": "连块土地",
     "estates": "连块土地",
     "expired_at": "截止时间 {time}",
     "expires_in": "到期时间 {time}",
     "expires_in_more_than_years": "{years} 年以上到期",
     "for": "对于",
+    "hours": "小时",
     "land": "LAND",
+    "learn_more": "学到更多",
     "loading": "载入中",
     "marketplace": "虚拟物品市场",
+    "minutes": "分钟",
     "mortgage": "抵押贷款",
     "mortgages": "抵押贷款",
     "own_address_warning": "那是您自己的地址！",
@@ -268,6 +280,7 @@
     "sale": "拍卖",
     "see_less": "少见",
     "see_more": "看更多",
+    "seconds": "秒",
     "service_unavailable": "暂停服务",
     "settings": "设置",
     "sign_in": "登录",
